# py_aws_reactive

./: pyproject.toml  setup.cfg
src/reactive_sns_sqs/: __init__.py  daemon.py  daemon_manager.py  sns_publisher.py  sqs_listener.py  stream_mediator.py
src/reactive_sns_sqs/helpers/: sqs_helper.py
src/reactive_sns_sqs/models/: IAMUser.py  __init__.py  listener_options.py  sns.py
tests/: test_reactive_sns_sqs.py  test_stream_mediator.py
