[tool.poetry]
name = "reactive_sns_sqs"
version = "0.1.0"
description = ""
authors = ["jonbran <jon@jonbrandon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.35"
pydantic = "^1.9.0"
Rx = "^3.2.0"
botocore = "^1.23.35"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
