[metadata]
name = Reactive_SNS_SQS
version = 0.0.1
author = Jon brandon
author_email = jonbr@zillowgroup.com
description = A reactive way to interact with SQS and SNS
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pydantic